--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@
 # Used by dotenv library to load environment variables.
 # .env
 
+# node_modules
+node_modules
+
 # Ignore Byebug command history file.
 .byebug_history
 
