make sure simplecov is setup properly
Signed-off-by: Yomi Colledge <baphled@boodah.net>

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,7 @@ jobs:
     script: skip
     deploy:
       provider: script
+      api_key: "$GITHUB_TOKEN"
       skip_cleanup: true
       script:
       - npx semantic-release
